--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
   "dependencies": {
     "@expo/metro-runtime": "^3.1.1",
+    "@types/react": "~18.2.45",
     "expo": "^50.0.1",
+    "expo-blur": "~12.9.2",
+    "expo-haptics": "~12.8.1",
+    "expo-image": "~1.10.6",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.2",
+    "react-native": "0.73.6",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-reanimated": "~3.6.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3"
