--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "dependencies": {
     "@expo/metro-runtime": "^3.1.1",
+    "@react-native-masked-view/masked-view": "0.3.0",
     "@types/react": "~18.2.45",
     "expo": "^50.0.1",
     "expo-blur": "~12.9.2",
     "expo-haptics": "~12.8.1",
     "expo-image": "~1.10.6",
+    "expo-linear-gradient": "~12.7.2",
     "expo-status-bar": "~1.11.1",
+    "lottie-react-native": "6.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
