--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "dependencies": {
     "@expo/metro-runtime": "^3.1.1",
     "@react-native-masked-view/masked-view": "0.3.0",
+    "@tanstack/react-query": "^5.29.0",
     "@types/react": "~18.2.45",
+    "axios": "^1.6.8",
     "expo": "^50.0.1",
     "expo-blur": "~12.9.2",
     "expo-haptics": "~12.8.1",
