--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "@tanstack/react-query": "^5.29.0",
     "@types/react": "~18.2.45",
     "axios": "^1.6.8",
-    "expo": "^50.0.1",
+    "expo": "~50.0.15",
     "expo-blur": "~12.9.2",
     "expo-haptics": "~12.8.1",
     "expo-image": "~1.10.6",
